konpu-macros/tests/ui/fail_unknown_law.rs
#[konpu::law(foobar)]
fn unknown_law() {}